--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,167 +1,156 @@
-<section class="vh-250 gradient-custom">
-    <div class="container py-5 h-100">
-         
-            <div class="col-12 col-lg-9 col-xl-7">
-                
-                    <div class="card-body p-4 p-md-5">
-                        <h3 class="mb-4 pb-2 pb-md-0 mb-md-5">Sign Up</h3>
-                        <form #f="ngForm" (ngSubmit)="f.form.valid && onFormSubmit()">
+<section class="vh-100 bg-image"
+    style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/img3.webp')"
+    class="w-100" style="border-top-left-radius: .3rem; border-top-right-radius: .3rem;">
+    <div class="mask d-flex align-items-center h-100 gradient-custom-3">
+        <div class="container h-100">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-11 col-md-8 col-lg-5 col-xl-10">
+                    <div class="card" style="border-radius: 15px;">
+                        <div class="card-body p-5">
+                            <h2 class="text-uppercase text-center mb-5">Sign Up</h2>
 
-                            <div class="row">
-                                <div class="col-md-6 mb-4">
 
-                                    <div class="form-outline">
-                                        <label class="form-label" for="firstName" required>First Name</label>
-                                        <span class="redStar">*</span>
-                                        <input type="text" pattern="[a-zA-Z ]*" name="firstName" id="firstName"
-                                            [(ngModel)]="user.firstName" class="form-control ng-invalid form-control-lg"
-                                            required />
-                                        <div [hidden]="user.firstName !=''">
-                                            <p class="text-danger">First Name is required</p>
+
+                            <form #f="ngForm" (ngSubmit)="f.form.valid && onFormSubmit()">
+                                <div class="row">
+                                    <div class="col-md-6 mb-4">
+                                        <div class="form-outline">
+                                            <label class="form-label" for="firstName" required>First Name</label>
+                                            <span class="redStar">*</span>
+                                            <input type="text" pattern="[a-zA-Z ]*" name="firstName" id="firstName"
+                                                #firstName="ngModel" [(ngModel)]="user.firstName" ngmodel
+                                                class="form-control ng-invalid form-control-lg" required />
+                                            <small class="text-danger"
+                                                *ngIf="firstName.touched && !firstName.valid">First Name is
+                                                required</small>
                                         </div>
                                     </div>
+                                    <div class="col-md-6 mb-4">
 
-                                </div>
-                                <div class="col-md-6 mb-4">
-
-                                    <div class="form-outline">
-                                        <label class="form-label" for="lastName">Last
-                                            Name</label>
-                                        <span class="redStar">*</span>
-                                        <input type="text" pattern="[a-zA-Z ]*" id="lastName" name="lastName"
-                                            [(ngModel)]="user.lastName" class="form-control form-control-lg" required />
-                                        <div [hidden]="user.lastName !=''" >
-                                            <p class="text-danger">Last Name is required</p>
+                                        <div class="form-outline">
+                                            <label class="form-label" for="lastName">Last
+                                                Name</label>
+                                            <span class="redStar">*</span>
+                                            <input type="text" pattern="[a-Za-Z ]*" id="lastName" name="lastName"
+                                                #lastName="ngModel" [(ngModel)]="user.lastName"
+                                                class="form-control form-control-lg" required />
+                                            <small class="text-danger" *ngIf="lastName.touched && !lastName.valid">Last
+                                                Name is required</small>
                                         </div>
+
                                     </div>
-
                                 </div>
-                            </div>
 
-                            <div class="row">
-                                <div class="col-md-6 mb-4">
+                                <div class="row">
+                                    <div class="col-md-6 mb-4">
 
-                                    <div class="form-outline">
-                                        <label class="form-label" for="email">Email</label>
-                                        <span class="redStar">*</span>
-                                        <input type="text"  pattern="[a-zA-Z ]*" id="email" name="email"
-                                        [(ngModel)]="user.email" class="form-control form-control-lg" required />
-                                        <div [hidden]="user.email !=''" >
-                                            <p class="text-danger">Email is required</p>
+                                        <div class="form-outline">
+                                            <label class="form-label" for="email">Email</label>
+                                            <span class="redStar">*</span>
+                                            <input type="text" pattern="[a-Za-Z ]*" id="email" name="email"  #email="ngModel" 
+                                                [(ngModel)]="user.email" class="form-control form-control-lg" required/>
+                                            <small class="text-danger" *ngIf="email.touched && !email.valid">Email is
+                                                required</small>
                                         </div>
+
                                     </div>
+                                    <div class="col-md-6 mb-4">
+                                        <div class="form-outline">
+                                            <label class="form-label" for="Role">Role</label>
+                                            <span class="redStar">*</span>
+                                            <input type="text" pattern="[a-zA-Z ]*" id="role" name="role" ngModel
+                                                #role="ngModel" [(ngModel)]="user.role"
+                                                class="form-control form-control-lg" required />
+                                            <small class="text-danger" *ngIf="role.touched && !role.valid">Role is
+                                                required</small>
 
-                                </div>
-                                <div class="col-md-6 mb-4">
-
-                                    <div class="form-outline">
-                                        <label class="form-label" for="Role">Role</label>
-                                        <span class="redStar">*</span>
-                                        <input type="text"  pattern="[a-zA-Z ]*" id="role" name="role"
-                                        [(ngModel)]="user.role" class="form-control form-control-lg" required />
-                                        <div [hidden]="user.role !=''" >
-                                            <p class="text-danger">Role is required</p>
-                                        </div>
-                                    </div>
-
-                                </div>
-                            </div>
-                            <div class="row">    
-                               
-                                <div class="col-md-6 mb-4">
-
-                                    <div class="form-outline">
-                                        <label class="form-label" for="userName">User Name</label>
-                                        <span class="redStar">*</span>
-                                        <input type="text"  pattern="[a-zA-Z ]*" id="userName" name="userName"
-                                        [(ngModel)]="user.userName" class="form-control form-control-lg" required />
-                                        <div [hidden]="user.userName !=''" >
-                                            <p class="text-danger">User Name is required</p>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-md-6 mb-4 pb-2">
+                                <div class="row">
+                                    <div class="col-md-6 mb-4">
+                                        <div class="form-outline">
+                                            <label class="form-label" for="userName">User Name</label>
+                                            <span class="redStar">*</span>
+                                            <input type="text" pattern="[a-zA-Z ]*" id="userName" name="userName"
+                                                ngModel #userName="ngModel" [(ngModel)]="user.userName"
+                                                class="form-control form-control-lg" required />
 
-                                    <div class="form-outline">
-                                        <label class="form-label" for="userId">User ID</label>
-                                        <span class="redStar">*</span>
-                                        <input name="userId" [(ngModel)]="user.userId" type="text" id="userId"
-                                            class="form-control form-control-lg" required />
-                                        <div [hidden]="user.userId !=''" >
-                                            <p class="text-danger">User ID is required</p>
+                                            <small class="text-danger" *ngIf="userName.touched && !userName.valid">User
+                                                Name is required</small>
                                         </div>
                                     </div>
+                                    <div class="col-md-6 mb-4 pb-2">
+                                        <div class="form-outline">
+                                            <label class="form-label" for="userId">User ID</label>
+                                            <span class="redStar">*</span>
+                                            <input name="userId" [(ngModel)]="user.userId" type="text" id="userId"
+                                                name="userId" ngModel #userId="ngModel"
+                                                class="form-control form-control-lg" required />
+                                            <small class="text-danger" *ngIf="userId.touched && !userId.valid">User ID
+                                                is required</small>
 
-                                </div>
-                            </div>
-                            <div class="row">    
-                        
-                                <div class="col-md-6 mb-4 pb-2">
-
-                                    <div class="form-outline">
-                                        <label class="form-label" for="phoneNumber">Contact Number</label>
-                                        <span class="redStar">*</span>
-                                        <input name="contactNumber" pattern="[0-9]*" [(ngModel)]="user.contactNumber"
-                                            type="tel" id="phoneNumber" class="form-control form-control-lg" required />
-                                        <div [hidden]="user.contactNumber !=''" >
-                                            <p class="text-danger">Contact Number is required</p>
                                         </div>
                                     </div>
-
                                 </div>
-                                <div class="col-md-6 mb-4 pb-2">
+                                <div class="row">
+                                    <div class="col-md-6 mb-4 pb-2">
+                                        <div class="form-outline">
+                                            <label class="form-label" for="phoneNumber">Contact Number</label>
+                                            <span class="redStar">*</span>
+                                            <input name="contactNumber" pattern="[0-9]*"
+                                                [(ngModel)]="user.contactNumber" name="contactNumber" ngModel
+                                                #contactNumber="ngModel" type="tel" id="phoneNumber"
+                                                class="form-control form-control-lg" required />
+                                            <small class="text-danger"
+                                                *ngIf="contactNumber.touched && !contactNumber.valid">Contact Number is
+                                                required</small>
 
-                                    <div class="form-outline">
-                                        <label class="form-label" for="alternateNumber">Alternate Number</label>
-                                        <span class="redStar">*</span>
-                                        <input name="alternateNumber" pattern="[0-9]*" [(ngModel)]="user.alternateNumber"
-                                            type="tel" id="alternateNumber" class="form-control form-control-lg" required />
-                                        <div [hidden]="user.alternateNumber !=''" >
-                                            <p class="text-danger">Alternate Number is required</p>
                                         </div>
                                     </div>
+                                    <div class="col-md-6 mb-4 pb-2">
+                                        <div class="form-outline">
+                                            <label class="form-label" for="alternateNumber">Alternate Number</label>
+                                            <span class="redStar">*</span>
+                                            <input name="alternateNumber" pattern="[0-9]*"
+                                                [(ngModel)]="user.alternateNumber" name="alternateNumber" ngModel
+                                                #alternateNumber="ngModel" type="tel" id="alternateNumber"
+                                                class="form-control form-control-lg" required />
+                                            <small class="text-danger"
+                                                *ngIf="alternateNumber.touched && !alternateNumber.valid">Alternate
+                                                Number is required</small>
 
-                                </div>
-                            </div>
-
-                            <div class="row">
-                                <div class="col-md-6 mb-4 pb-2">
-
-                                    <div class="form-outline">
-                                        <label class="form-label" for="password">Password</label>
-                                        <span class="redStar">*</span>
-                                        <input name="password" [(ngModel)]="user.password" type="password" id="password"
-                                            class="form-control form-control-lg" required />
-                                        <div [hidden]="user.password !=''" >
-                                            <p class="text-danger">Password is required</p>
                                         </div>
                                     </div>
-
                                 </div>
-                                <div class="col-md-6 mb-4 pb-2">
+                                <div class="row">
+                                    <div class="col-md-6 mb-4 pb-2">
+                                        <div class="form-outline">
+                                            <label class="form-label" for="password">Password</label>
+                                            <span class="redStar">*</span>
+                                            <input name="password" [(ngModel)]="user.password" type="password"
+                                                id="password" name="password" ngModel #password="ngModel"
+                                                class="form-control form-control-lg" required />
+                                            <small class="text-danger"
+                                                *ngIf="password.touched && !password.valid">Password is required</small>
 
-                                    <div class="form-outline">
-                                        <label class="form-label" for="confirmPassword">Confirm Password</label>
-                                        <span class="redStar">*</span>
-                                        <input type="password" name="confirmPassword" id="confirmPassword"
-                                            class="form-control form-control-lg" [(ngModel)]="confirmPassword"
-                                            required />
-                                        <div [hidden]="confirmPassword !=''" >
-                                            <p class="text-danger">Confirm Password is required</p>
                                         </div>
                                     </div>
+                                    <div class="col-md-6 mb-4 pb-2">
+                                        <div class="form-outline">
+                                            <label class="form-label" for="confirmPassword">Confirm Password</label>
+                                            <span class="redStar">*</span>
+                                            <input type="password" name="confirmPassword" id="confirmPassword"
+                                                class="form-control form-control-lg" [(ngModel)]="confirmPassword" />
 
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
-
-
-                            <div class="mt-4 pt-2">
-                                <input (click)="onFormSubmit()" class="btn btn-primary btn-lg" type="submit" value="Submit"
-                                    [disabled]="user.password != confirmPassword" />
-                            </div>
-                        </form>
+                                <div class="mt-4 pt-2">
+                                    <input class="btn btn-success btn-block btn-lg gradient-custom-4 text-body" type="submit"
+                                        value="Submit" [disabled]="user.password != confirmPassword " />
+                                </div>
+                            </form>
+                        </div>
                     </div>
-                
-            </div>
-        
-    </div>
+                </div>
